[package]
name = "memchr"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.139" }
memchr-rust = { package = "memchr", version = "2.5.0"}

[dev-dependencies]
criterion = { version = "0.4.0" }

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"
